--- a/curs5/css/ap1.css
+++ b/curs5/css/ap1.css
@@ -1,1 +1,9 @@
-
+div{
+    margin: 20px;
+    border: 2px solid red;
+    max-width: 200px;
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 50%;
+}
