--- a/recapitulare/css/ap7.css
+++ b/recapitulare/css/ap7.css
@@ -1,1 +1,78 @@
+nav{
+    font-family:"Rubik Scribble";
+    background-color: #284554;
+    height: 43px;
+    width: 60%;
+    margin: 20px auto;
+    font-size: 24px;
+    margin: auto;
+    
+}
 
+nav > ul {
+    width: 90%;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+}
+
+nav > ul > li{
+    text-transform: uppercase;
+    display: inline;
+    float: left;
+    padding: 7px 5px 7px 5px;
+}
+
+
+nav > ul > li > a {
+    background-color: blueviolet;
+    text-decoration: none;
+    list-style: none;
+    padding: 7px 15px;
+   
+   
+    
+}
+
+nav > ul > li > a {
+    color: red;
+}
+
+nav > ul > li:hover,
+nav > ul > li.active{
+    background-color: greenyellow;
+    font-size: 24px;
+}
+
+/* zone dedicata pentru submeniu*/
+
+ul.submeniu{
+    text-transform: uppercase;
+    display: none;
+    list-style: none;
+}
+
+nav > ul > li:hover > ul.submeniu{
+    display: block;
+    background-color: white;
+    clear: both;
+    margin-top: 10px;
+    position: absolute;
+    z-index: 100;
+    width: 160px;
+}
+
+ul.submeniu > li:hover {
+    background-color: red;
+    color: orange;
+}
+
+nav > ul > li:hover > ul.submeniu > li {
+    padding: 7px 5px 7px 5px;
+}
+
+nav > ul >li:hover > ul.submeniu > li > a {
+    padding: 7px 5px 7px 5px ;
+    text-decoration: none;
+    color: blueviolet;
+}
